feat: implementacao da logica do motor de recomendacao